static-web- ended

--- a/static-Web/index.html
+++ b/static-Web/index.html
@@ -22,9 +22,7 @@
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#dream-team">Dream Team</a></li>
-                <li><a href="#">Download</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#download">Download</a></li>
             </ul>
         </nav>
     </action>
@@ -35,9 +33,42 @@
         </section>
         <section id="dream-team">
             <div class="card">
-                <p class="white-text">Hola</p>
+                <div>
+                    <h1>What is Dream Team</h1>
+                    <p>Dream team is an mobile/web application that makes you an easy management of all your football leagues, 
+                        players, stadistics and more!
+                    </p>
+                </div>
+
+                <div>
+                    <h1>Made for</h1>
+                    <p>Dream Team has been made for all public, but with special focus on young people, to let them have all their,
+                        matchs organized
+                    </p>
+                </div>
+
+                <div>
+                    <h1>Free to use</h1>
+                    <p>Dream Teams has been developed for fun and its available for all the people, enjoy!</p>
+                </div>
             </div>
         </section>
+        <section id="download">
+
+            <div id="downloadCard">
+                <div id="phoneContainer">
+                    <img src="../home app web.png" alt="">
+                </div>
+    
+                <div id="downloadOptions">
+                    <button>Dowload Play Store</button>
+                    <button>Dowload App Store</button>
+                </div>
+            </div>
+           
+
+        </section>
+
     </action>
 </body>
 </html>
